--- a/css/styles.css
+++ b/css/styles.css
@@ -310,44 +310,25 @@ nav li .fillter-links {
 
 .fillter-service-btn {
     color: var(--white, #FFFFFF);
-    /* Button Text */
-    font-size: 16px;
-    font-weight: 500;
-    font-style: Roboto;
-    line-height: 1.5;
-    /* 150% */
-    letter-spacing: 0.64px;
     padding: 16px 32px;
     align-items: flex-start;
     gap: 10px;
     border-radius: 4px;
     background: var(--iris, #4D5AE5);
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+    cursor: pointer;
 }
 
 .fillter-service-btn:hover {
-    background-color: var(--iris, #404BBF);
+    background-color: var(--ocean, #404BBF);
 }
 
 .fillter-service-btn:focus {
-    background-color: var(--iris, #404BBF);
+    background-color: var(--ocean, #404BBF);
 }
 
 .fillter-business {
     display: flex;
-    width: 496px;
-    color: var(--white, #FFFFFF);
-    text-align: center;
-    /* Header 1 */
-    font-size: 56px;
-    font-weight: 700;
-    line-height: 1.07;
-    /* 107.143% */
-    letter-spacing: 1.12px;
-}
-
-.order-service {
-    align-items: center;
     width: 496px;
     color: var(--white, #FFFFFF);
     text-align: center;
@@ -365,16 +346,13 @@ nav li .fillter-links {
     padding: 0;
     border: none;
     background: none;
-    text-transform: uppercase;
-    color: var(--iris, #4D5AE5);
     text-align: center;
     /* Button Text */
     font-size: 16px;
     font-weight: 500;
     line-height: 1.5;
     /* 150% */
-    letter-spacing: 0.64px;
-    cursor: pointer;
+    letter-spacing: 0.02em;
 }
 
 .side-info {
@@ -515,7 +493,8 @@ li {
     letter-spacing: 0.64px;
 }
 
-.social-links li a {
+.social-links button{
+    color: var(--iris, #4D5AE5);
     padding: 12px 24px;
     border-radius: 4px;
     border: 1px solid var(--cornflower, #E7E9FC);
