--- a/css/styles.css
+++ b/css/styles.css
@@ -1,35 +1,36 @@
 :root {
-    --background-color: white, #FFFFFF;
-    --background-color: ocean, #404BBF;
-    --background-color: navyblue, #2E2F42;
-    --background-color: --cloud, #f4f4fd;
+    --background-main-color: #FFFFFF;
+    --background-fourth-color: #404BBF;
+    --background-third-color: #2E2F42;
+    --background-secondary-color:#f4f4fd;
 
     --font-heading: 'Raleway', serif;
     --font-text: 'Roboto', sans-serif;
 
-    --font-alt-color: slate, #434455;
-    --font-main-color: navyblue, #2E2F42;
+    --font-third-color:#404BBF;
+    --font-secondary-color:#434455;
+    --font-main-color: #2E2F42;
 
-    --brand-color: iris, #4D5AE5;
+    --brand-color: #4D5AE5;
 
 }
 
 .fillter-contact-1 a:hover,
 .fillter-contact-2 a:hover {
-    color: var(--iris, #4D5AE5);
+    color: var(--brand-color);
 }
 
 .fillter-contact-1 a:focus,
 .fillter-contact-2 a:focus {
-    color: var(--iris, #4D5AE5);
+    color: var(--brand-color);
 }
 
 .fillter-web-links a:hover {
-    color: var(--iris, #4D5AE5);
+    color: var(--brand-color);
 }
 
 .fillter-web-links a:focus {
-    color: var(--iris, #4D5AE5);
+    color: var(--brand-color);
     
 }
 
@@ -37,16 +38,16 @@
 .social-links button:hover {
     padding: 12px 24px;
     border-radius: 4px;
-    color: var(--white, #FFFFFF);
-    background: var(--ocean, #404BBF);
+    color: var(--background-main-color);
+    background: var(--background-fourth-color);
     box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.12), 0px 2px 1px 0px rgba(0, 0, 0, 0.08), 0px 3px 1px 0px rgba(0, 0, 0, 0.10);
 }
 
 .social-links button:focus {
     padding: 12px 24px;
     border-radius: 4px;
-    color: var(--white, #FFFFFF);
-    background: var(--ocean, #404BBF);
+    color: var(--background-main-color);
+    background: var(--background-fourth-color);
     box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.12), 0px 2px 1px 0px rgba(0, 0, 0, 0.08), 0px 3px 1px 0px rgba(0, 0, 0, 0.10);
 }
 
@@ -135,7 +136,7 @@ header {
     align-items: center;
     flex-shrink: 0;
     border-bottom: 1px solid var(--cornflower, #E7E9FC);
-    background: var(--white, #FFFFFF);
+    background: var(--background-main-color);
 }
 
 body {
@@ -143,7 +144,7 @@ body {
     margin: 0;
     width: 1440px;
     min-height: 100%;
-    background: var(--white, #FFFFFF);
+    background: var(--background-main-color);
 
 }
 
@@ -182,7 +183,7 @@ button {
 
 .fillter-contact-links {
     display: flex;
-    color: var(--slate, #434455);
+    color: var(--font-secondary-color);
     /* Body */
     text-align: center;
     font-size: 16px;
@@ -207,7 +208,7 @@ button {
     width: 153px;
     height: 24px;
     display: flex;
-    color: var(--slate, #434455);
+    color: var(--font-secondary-color);
     /* Body */
     text-align: center;
     font-size: 16px;
@@ -223,7 +224,7 @@ button {
     width: 44px;
     height: fit-content;
     padding: 0px;
-    color: var(--iris, #4D5AE5);
+    color: var(--brand-color);
     font-family: Raleway;
     font-size: 18px;
     font-weight: 800;
@@ -260,7 +261,7 @@ button {
 .fillter-links-2 a,
 .fillter-links-3 a{
     display: flex;
-    color: var(--navyblue, #2E2F42);
+    color: var(--font-main-color);
     /* Body Medium */
     width: fit-content;
     height: 24px;
@@ -285,7 +286,7 @@ nav li .fillter-links {
     margin-right: auto;
     width: 71px;
     padding-left: 0px;
-    color: var(--navyblue, #2E2F42);
+    color: var(--font-main-color);
     font-family: Raleway;
     font-size: 18px;
     font-weight: 800;
@@ -298,7 +299,7 @@ nav li .fillter-links {
 
 .main-info {
     display: flex;
-    background: var(--navyblue, #2E2F42);
+    background: var(--font-main-color);
     flex-shrink: 0;
     flex-direction: column;
     flex-wrap: nowrap;
@@ -309,28 +310,28 @@ nav li .fillter-links {
 }
 
 .fillter-service-btn {
-    color: var(--white, #FFFFFF);
+    color: var(--background-main-color);
     padding: 16px 32px;
     align-items: flex-start;
     gap: 10px;
     border-radius: 4px;
-    background: var(--iris, #4D5AE5);
+    background: var(--brand-color);
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
     cursor: pointer;
 }
 
 .fillter-service-btn:hover {
-    background-color: var(--ocean, #404BBF);
+    background-color: var(--background-fourth-color);
 }
 
 .fillter-service-btn:focus {
-    background-color: var(--ocean, #404BBF);
+    background-color: var(--background-fourth-color);
 }
 
 .fillter-business {
     display: flex;
     width: 496px;
-    color: var(--white, #FFFFFF);
+    color: var(--background-main-color);
     text-align: center;
     /* Header 1 */
     font-size: 56px;
@@ -370,7 +371,7 @@ nav li .fillter-links {
     display: flex;
     height: auto;
     width: 264px;
-    color: var(--navyblue, #2E2F42);
+    color: var(--font-main-color);
     /* Header 3 */
     font-size: 20px;
     font-weight: 500;
@@ -402,14 +403,14 @@ nav li .fillter-links {
     align-content: flex-start;
     align-items: center;
     margin-top: 120px;
-    background: var(--white, #FFFFFF);
+    background: var(--background-main-color);
 }
 
 .team {
     display: flex;
     justify-content: center;
     align-items: center;
-    color: var(--navyblue, #2E2F42);
+    color: var(--font-main-color);
     text-align: center;
     /* Header 2 */
     font-size: 36px;
@@ -430,12 +431,12 @@ nav li .fillter-links {
     align-items: center;
     margin: auto;
     border-radius: 0px 0px 4px 4px;
-    background: var(--white, #FFFFFF);
+    background: var(--background-main-color);
     box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
 
 .fillter-team-names {
-    color: var(--navyblue, #2E2F42);
+    color: var(--font-main-color);
     text-align: center;
     /* Header 3 */
     font-size: 20px;
@@ -448,7 +449,7 @@ nav li .fillter-links {
 }
 
 .fillter-team-ocupation {
-    color: var(--slate, #434455);
+    color: var(--font-secondary-color);
     text-align: center;
     /* Body */
     font-size: 16px;
@@ -464,7 +465,7 @@ li {
 }
 
 .fillter-item button{
-    --brand-color: var(--iris, #4D5AE5);
+    --brand-color: var(--brand-color);
     text-align: inherit;
     /* Button Text */
     font-size: 16px;
@@ -494,11 +495,11 @@ li {
 }
 
 .social-links button{
-    color: var(--iris, #4D5AE5);
+    color: var(--brand-color);
     padding: 12px 24px;
     border-radius: 4px;
     border: 1px solid var(--cornflower, #E7E9FC);
-    background: var(--cloud, #F4F4FD);
+    background: var(--background-secondary-color);
 }
 
 .portfolio-list {
@@ -508,7 +509,7 @@ li {
     flex-direction: column;
     align-items: normal;
     flex-shrink: 0;
-    background: var(--white, #FFFFFF);
+    background: var(--background-main-color);
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 24px;
@@ -527,7 +528,7 @@ li {
     display: inline;
     width: 290px;
     height: 24px;
-    color: var(--navyblue, #2E2F42);
+    color: var(--font-main-color);
 
     /* Header 3 */
     font-size: 20px;
@@ -538,7 +539,7 @@ li {
     padding-bottom: 0px;
     flex-direction: column;
     flex-shrink: 0;
-    background: var(--white, #FFFFFF);
+    background: var(--background-main-color);
 }
 
 .fillter-portfolio-sidetext {
@@ -546,7 +547,7 @@ li {
     flex-direction: row;
     width: fit-content;
     height: 24px;
-    color: var(--slate, #434455);
+    color: var(--font-secondary-color);
     /* Body */
     font-size: 16px;
     line-height: 1.5;
@@ -562,7 +563,7 @@ li {
     align-items: center;
     width: auto;
     height: 312px;
-    background: var(--navyblue, #2E2F42);
+    background: var(--font-main-color);
 }
 
 .fillter-bottom-studio {
@@ -570,7 +571,7 @@ li {
     width: 44px;
     height: fit-content;
     padding: 0px;
-    color: var(--iris, #4D5AE5);
+    color: var(--brand-color);
     font-family: Raleway;
     font-size: 18px;
     font-weight: 800;
@@ -590,7 +591,7 @@ li {
     padding: 0%;
     flex-direction: column;
     justify-content: left;
-    color: var(--cloud, #F4F4FD);
+    color: var(--background-secondary-color);
     font-family: Raleway;
     font-size: 18px;
     font-weight: 800;
@@ -605,7 +606,7 @@ li {
     display: flex;
     width: 264px;
     height: fit-content;
-    color: var(--cloud, #F4F4FD);
+    color: var(--background-secondary-color);
     /* Body */
     font-size: 16px;
     line-height: 1.5;
@@ -632,7 +633,7 @@ li {
 .fillter-studio-paragraph {
     display: flex;
     margin: 0;
-    color: var(--navyblue, #2E2F42);
+    color: var(--font-main-color);
     text-align: center;
     /* Header 2 */
     font-size: 36px;
@@ -648,7 +649,7 @@ li {
     width: 264px;
     height: fit-content;
     margin: 0px 0px 0px 0px;
-    color: var(--slate, #434455);
+    color: var(--font-secondary-color);
     /* Body */
     font-size: 16px;
     line-height: 1.5;
