--- a/css/styles.css
+++ b/css/styles.css
@@ -135,8 +135,7 @@ button {
     /* 150% */
     letter-spacing: 0.23px;
     padding: 0;
-    margin: 0;
-    padding-left: 332px;
+    margin-left: 332px;
 }
 
 .fillter-contact-2 {
