--- a/css/styles.css
+++ b/css/styles.css
@@ -61,7 +61,7 @@
     align-items: center;
     justify-content: center;
     width: 1158px;
-    margin: 0, auto;
+    margin: 0;
     padding: 0 15px 0 15px;
 }
 
@@ -358,10 +358,10 @@ nav li .fillter-links {
 .fillter-team-info {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     margin: auto;
-
+    height: 380px;
     border-radius: 0px 0px 4px 4px;
     background: var(--background-main-color);
     box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
@@ -376,7 +376,7 @@ nav li .fillter-links {
     /* 120% */
     letter-spacing: 0.02em;
     gap: 8px;
-    margin-bottom: 0px;
+    padding: 32px 0px 0px 0px;
 
 }
 
