--- a/css/styles.css
+++ b/css/styles.css
@@ -43,6 +43,7 @@
 .social-links button:hover {
     padding: 12px 24px;
     border-radius: 4px;
+    border: none;
     color: var(--background-main-color);
     background: var(--background-fourth-color);
     box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.12), 0px 2px 1px 0px rgba(0, 0, 0, 0.08), 0px 3px 1px 0px rgba(0, 0, 0, 0.10);
@@ -51,6 +52,7 @@
 .social-links button:focus {
     padding: 12px 24px;
     border-radius: 4px;
+    border: none;
     color: var(--background-main-color);
     background: var(--background-fourth-color);
     box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.12), 0px 2px 1px 0px rgba(0, 0, 0, 0.08), 0px 3px 1px 0px rgba(0, 0, 0, 0.10);
@@ -133,7 +135,7 @@ button {
     /* 150% */
     letter-spacing: 0.23px;
     padding: 0;
-    margin-left: 332px;
+    padding-left: 332px;
 }
 
 .fillter-contact-2 {
@@ -154,7 +156,7 @@ button {
     line-height: 1.5;
     /* 150% */
     letter-spacing: 0.23px;
-    margin-left: auto;
+    padding-left: auto;
 }
 
 
@@ -181,7 +183,7 @@ button {
     width: fit-content;
     align-items: center;
     flex-shrink: 0;
-    margin-right: 76px;
+    padding-right: 76px;
 }
 
 .fillter-logo-links-bottom {
@@ -190,8 +192,8 @@ button {
     width: fit-content;
     align-items: center;
     flex-shrink: 0;
-    margin: 55px 0px 18px 156px;
-    padding: 34px 0px 0px 0px;
+    padding: 89px 0px 18px 156px;
+    margin: 0;
 }
 
 .fillter-links a{
@@ -203,8 +205,8 @@ button {
     font-weight: 500;
     line-height: 1.5;
     gap: 40px;
-    margin-top: 24px;
-    margin-bottom: 24px;
+    padding-top: 24px;
+    padding-bottom: 24px;
     align-items: flex-start;
     /* 150% */
     letter-spacing: 0.02em;
@@ -279,7 +281,7 @@ nav li .fillter-links {
     display: flex;
     align-items: center;
     padding: 0;
-    margin-top: 48px;
+    padding-top: 48px;
     border: none;
     background: none;
     text-align: center;
@@ -294,8 +296,8 @@ nav li .fillter-links {
 .side-info {
     display: flex;
     align-items: center;
-    margin: 0px 0px 0px 156px;
-    padding: 0;
+    padding: 0px 0px 0px 156px;
+    margin: 0;
     gap: 24px;
     flex-direction: row;
 }
@@ -324,11 +326,10 @@ nav li .fillter-links {
     display: flex;
     flex-shrink: 0;
     width: 1440px;
-    height: 732px;
     flex-direction: column;
     align-content: flex-start;
     align-items: center;
-    margin-top: 120px;
+    padding-top: 120px;
     background: var(--background-secondary-color);
 }
 
@@ -354,7 +355,7 @@ nav li .fillter-links {
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    margin: 72px 12px 0px 12px;
+    padding: 72px 12px 0px 12px;
     border-radius: 0px 0px 4px 4px;
     background: var(--background-main-color);
     box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
@@ -380,8 +381,8 @@ nav li .fillter-links {
     line-height: 1.5;
     /* 150% */
     letter-spacing: 0.02em;
-    margin: 0px 0px 19px 0px;
-    padding: 16px 0px 15px 0px;
+    margin: 0;
+    padding: 16px 0px 34px 0px;
 }
 
 menu,
@@ -390,7 +391,6 @@ li {
 }
 
 .fillter-item button{
-    --brand-color: var(--brand-color);
     text-align: inherit;
     /* Button Text */
     font-size: 16px;
@@ -417,15 +417,15 @@ li {
     gap: 24px;
     /* 150% */
     letter-spacing: 0.02em;
-    margin-top: 96px;
-    margin-left: 191px;
+    padding-top: 96px;
+    padding-left: 191px;
 }
 
 .social-links button{
     color: var(--brand-color);
     padding: 12px 24px;
     border-radius: 4px;
-    border: 1px solid var(--cornflower, #E7E9FC);
+    border: 1px solid var(--cornflower,#E7E9FC);
     background: var(--background-secondary-color);
 }
 
@@ -481,8 +481,8 @@ li {
     /* 150% */
     letter-spacing: 0.32px;
     padding-left: 16px;
-    padding-top: 8px;
-    padding-bottom: 18px;
+    padding-bottom: 32px;
+    margin: 0;
 }
 
 .fillter-bottom-section {
@@ -536,14 +536,14 @@ li {
     line-height: 1.5;
     /* 150% */
     letter-spacing: 0.02em;
-    margin: 0px 0px 68px 156px;
-    padding: 0px 0px 43px 0px;
+    padding: 0px 0px 111px 156px;
+    margin: 0;
     justify-content: center
 }
 
 .fillter-studio-info {
     display: flex;
-    margin: auto;
+    padding: auto;
     width: 1128px;
     flex-direction: column;
 }
@@ -555,7 +555,7 @@ li {
 
 .fillter-studio-paragraph {
     display: flex;
-    margin: 0px 0px 72px 0px;
+    padding: 0px 0px 72px 0px;
     color: var(--font-main-color);
     text-align: center;
     /* Header 2 */
@@ -570,7 +570,7 @@ li {
 
 .fillter-paragraph-info {
     width: 264px;
-    margin: 0px 0px 0px 0px;
+    margin: 0;
     color: var(--font-secondary-color);
     /* Body */
     font-size: 16px;
