--- a/css/styles.css
+++ b/css/styles.css
@@ -65,6 +65,7 @@ ul {
 
 .container {
     display: flex;
+    
     align-items: center;
     width: 1158px;
     margin: 0;
@@ -73,6 +74,8 @@ ul {
 
 .child {
     display: flex;
+    flex-direction: column;
+    
 }
 
 .section {
@@ -200,7 +203,7 @@ button {
     width: fit-content;
     align-items: center;
     flex-shrink: 0;
-    padding: 89px 0px 18px 156px;
+    padding: 89px 0px 18px 0px;
     margin: 0;
 }
 
@@ -304,7 +307,7 @@ nav li .fillter-links {
 .side-info {
     display: flex;
     align-items: center;
-    padding: 0px 0px 0px 156px;
+    padding: 0;
     margin: 0;
     gap: 24px;
     flex-direction: row;
@@ -358,12 +361,18 @@ nav li .fillter-links {
     flex-direction: column;
 }
 
+.team-position {
+    display: flex;
+    flex-direction: row;
+    gap: 24px;
+
+}
+
 .fillter-team-info {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    padding: 72px 12px 0px 12px;
     border-radius: 0px 0px 4px 4px;
     background: var(--background-main-color);
     box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
@@ -540,7 +549,6 @@ li {
     line-height: 1.5;
     /* 150% */
     letter-spacing: 0.02em;
-    padding-left: 156px;
     padding-bottom: 100px;
 }
 
