--- a/css/styles.css
+++ b/css/styles.css
@@ -47,8 +47,6 @@ ul {
 
 .social-links button:hover {
     padding: 12px 24px;
-    border-radius: 4px;
-    border: none;
     color: var(--background-main-color);
     background: var(--background-fourth-color);
     box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.12), 0px 2px 1px 0px rgba(0, 0, 0, 0.08), 0px 3px 1px 0px rgba(0, 0, 0, 0.10);
@@ -56,17 +54,12 @@ ul {
 
 .social-links button:focus {
     padding: 12px 24px;
-    border-radius: 4px;
-    border: none;
     color: var(--background-main-color);
     background: var(--background-fourth-color);
     box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.12), 0px 2px 1px 0px rgba(0, 0, 0, 0.08), 0px 3px 1px 0px rgba(0, 0, 0, 0.10);
 }
 
 .container {
-    display: flex;
-    
-    align-items: center;
     width: 1158px;
     margin: 0;
     padding: 0 15px 0 156px;
@@ -334,13 +327,8 @@ nav li .fillter-links {
 
 
 .fillter-team-section {
-    display: flex;
-    flex-shrink: 0;
-    width: 1440px;
-    flex-direction: column;
-    align-content: flex-start;
-    align-items: center;
     padding-bottom: 120px;
+    padding-top: 120px;
     background: var(--background-secondary-color);
 }
 
@@ -364,6 +352,7 @@ nav li .fillter-links {
 .team-position {
     display: flex;
     flex-direction: row;
+    justify-content: center;
     gap: 24px;
 
 }
@@ -436,6 +425,7 @@ li {
     letter-spacing: 0.02em;
     padding-top: 96px;
     padding-left: 191px;
+    padding-bottom: 72px;
 }
 
 .social-links button{
@@ -554,7 +544,7 @@ li {
 
 .fillter-studio-info {
     display: flex;
-    padding: auto;
+    padding-bottom: 120px;
     width: 1128px;
     flex-direction: column;
 }
